# Princeton-Thesis

./: .gitignore  README.md  citations.tex  ideas.md  license.txt  makefile  outline.md  package-lock.json  package.json  test.npz  wc
acm-submission/: makefile  report.tex  sample-sigconf-biblatex.tex  sample-sigconf-i13n.tex
backup/: federatedTraining.py  inference.py  server.py  trainer.py
client/: README.md  architecture.py  backup  client.py  gui.py  image.py  parseTraining.py  pyproject.toml  run.sh  test.py  test.sh  training.py
client/client/: runner.py  server.py
client/scripts/: activate.env.sh  dataset-analysis.ipynb  parse_talon.py  test.client.sh  test.model.size.sh  test.server.sh
client/scripts/talon-conversion/: testing_list.txt  training_data.txt  validation_list.txt
code/: architecture.py  pyproject.toml  run.sh
doc/: Flower_SpeechBrain.ipynb  citations.bib  main.md  makefile  report.tex
doc/Thesis Presentation/: package-lock.json  package.json
doc/chapters/: 1intro.md  3.md  intro.md  main.md  strategies.md
doc/presentation/: package.json  slides.md
doc/proposals/: budget.md  ideas.md  projectproposal.md  systemDesign.md  written_project_proposal.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.js  App.jsx  index.css  index.js  main.jsx
frontend/src/components/: ConnectedClients.jsx  QueryButton.jsx  ServerControl.jsx  ServerForm.jsx  ServerInfo.jsx  Test.jsx  ToggleServer.jsx  default_commands.jsx
frontend/src/hooks/: useLocalStorageState.jsx
mobile_consumer/: readme.md
numen-modifications/: MODEL  model-query.py  model.py  pyproject.toml  sample.wav.keep  sxmo.phrases  talon-character.phrases  talon-environment.phrases  talon-mouse.phrases  voice.phrases
numen-modifications/lib/: autoset.py  constructor.sh  hierarchy.yaml  scope_database.py  script_creator.talon  test.constructor.sh
server/: federatedAlgo.py  flowerThread.py  makefile  pyproject.toml  run.sh  server.py
server/frontend/: package-lock.json  package.json
server/frontend/src/: App.js
server/server/: main.py
talon-phrases/: CHANGELOG.md  sxmo.phrases  talon-control.phrases  talon-gadget.phrases
