[build-system]
requires = [
    "poetry==1.1.14",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = [
    "Colton Loftus <cloftus@princeton.edu>",
]

[tool.poetry.dependencies]
python = "3.8.*"
flwr = "^1.0.0"
scikit-learn = "^1.1.1"
openml = "^0.12.2"
matplotlib = "^3.6.1"
torchaudio = "^0.12.1"
torch = "^1.12.1"
ipython = "^8.5.0"
tqdm = "^4.64.1"
lightning-flash = "^0.8.0"
HyperPyYAML = "^1.0.1"
speechbrain = "^0.5.13"
