[tool.poetry]
name = "federated speechcommands"
version = "0.1"
description = ""
authors = ["Colton Loftus <cloftus[--at--]princeton(--dot--)edu>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.14"
flwr = "^1.0.0"
requests = "^2.28.1"
PySimpleGUIWeb = "^0.39.0"
torch = "^1.13.1"
torchaudio = "^0.13.1"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poe.tasks]
test = "kitty"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
